feat 수익률 계산 기능 추가